Changelog
=========

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2011-05-05)
----------------

- Handle encoded subject lines better.
  [maurits]


1.0 (2011-05-05)
----------------

- Initial release